public/css/global.css
html, body {
    overflow-x: hidden;
}

body{
	font-family: 'Raleway', sans-serif;
	margin: 0 auto;
	/*margin-right: 1em;*/
	/*width: 100vw;*/
	text-align: center;
}

h1{
	margin-top: 5vh;
	font-size: 10vh;
	color: #FFFFFF;
}

div#aboutme {
	/*margin-top: -1em;*/
	padding-top: 1em;
	margin-left: -1em;
}

a{
	color: #FFFFFF;
	text-decoration: none;
	font-size: 4vmin;
}

ul a:hover { 
	color: #607D8B;
	padding-top: 4vh;
	border-top: 3px solid white;
}


ul#menu{
	margin: 0 auto;
	margin-top: 4vh;
	padding-top: 4vh;
	width: 75%;
	border-top: 1px solid white;
}

li {
	list-style-type: none;
  	padding-right: 4vw;
  	display: inline;

}

div.blog-entry{ 
	width: 100%;
	margin-left: -1em;
	padding-bottom: 5em;
	padding-top: 2em;
	padding-right: 1em;
	height: 100vh;
	background-size: cover;
}


h3.section-title{
	text-align: center;
	width: 100%;
	font-size: 8vh;
	color: white;
	margin-top: 0;
}

#profpic{
	width: 100%;
	text-align: center;
}

#profilepic{
	width: 17vmax;
	height: 17vmax;
}


div#aboutme{
	background-image: url("../assets/tropical.jpg");
	height: 100vh;
}

p{
	margin: 0 auto;
	font-size: 3vh;
	width: 80%;
	color: #FFFFFF;
}

div#myskills{
	background-image: url("../assets/skillsback.jpg");
	height: 100vh;
	background-size: 100% 100%;
}

div#myskills h3{
	margin-bottom: 0;
}

div#langskills{
	padding-left: 9vw;
	width: 100%;
	height: 80%;
	text-align: center;
}

div#myskills img{
	float: left;
	margin-top: 5vh;
	/*margin-left: 2.5vw;*/
	padding-right: 2.5vw;
	width: 15vmax;

}

div#mywork{
	background-image: url("../assets/worksmall.jpg");
}

.work{
	float: left;
	margin-left: 15vmin;
	height: 25vmin;
	width: 25vmin;
	border-radius: 1vh;
	text-align: center;
}

.work:hover{
	background-size: 100% 100%;
}

.work h4{
	font-weight: bolder;
	color: white;
	font-size: 3vh;
	margin-top: -7vh;
	margin-bottom: 2vh;
	background-size: 100% 100%;
}
.work p{
	color: transparent;
	font-size: 3vmin;
	padding-top: 1vmax;
}

.work:hover p{
	color: white;
}

#votesim{
	background: url("../assets/votesim.jpg")
}

#votesim:hover{
	background:linear-gradient(
	rgba(0, 0, 0, 0.8),
	rgba(0, 0, 0, 0.8)),
	url("../assets/votesim.jpg");
}

#web{
	clear: both;
	margin-top: 10vh;
	background: url("../assets/website.jpg")
}

#web:hover{
	background:linear-gradient(
	rgba(0, 0, 0, 0.8),
	rgba(0, 0, 0, 0.8)),
	url("../assets/votesim.jpg");
}

#tip{
	background: url("../assets/tipnsplit.png");
}

#tip:hover{
	background:linear-gradient(
	rgba(0, 0, 0, 0.8),
	rgba(0, 0, 0, 0.8)),
	url("../assets/tipnsplit.png");
}

#game{
	margin-top: 10vh;
	background: url("../assets/thehouse.jpg");
}

#game:hover{
	background:linear-gradient(
	rgba(0, 0, 0, 0.8),
	rgba(0, 0, 0, 0.8)),
	url("../assets/thehouse.jpg");
}

div#contactme{
	background-image: url("../assets/contactpic.jpg");
}

#contactme h3{
	color: black;
}

#contactme p{
	margin-bottom: 15vh;
	color: black;
	font-family: 'Arial';
	font-weight: 300;
}
.social{
	margin-left: 3vw;
	margin-right: 3vw;
	opacity: 0.6;
	width: 10vmax;
	height: 10vmax;
}

.social:hover {
	opacity: 1;
}

div#footer{
	clear: both;
	background-color: #FFFFFF;
	padding-top: 1em;
	margin-bottom: -1em;
}

#footer p{
	width: 100%;
	font-size: 2vh;
	color: #000000;
}

#footer a{
	color: blue;
	text-decoration: underline;
	font-size: 2vh;
	margin: 0 auto;
}

#mario{
	padding-left: 45vw;
	padding-top: 10vh;
}

.floating{
    float: left;
    -webkit-animation-name: Floatingx;
    -webkit-animation-duration: 0.5s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: ease-in-out;
    -moz-animation-name: Floating;
    -moz-animation-duration: 0.5s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: ease-in-out;
    margin-left: 30px;
    margin-top: 5px;

}

@-webkit-keyframes Floatingx{
    from {-webkit-transform:translate(0, 0px);}
    65% {-webkit-transform:translate(0, 15px);}
    to {-webkit-transform: translate(0, -0px);    }    
}
    
@-moz-keyframes Floating{
    from {-moz-transform:translate(0, 0px);}
    65% {-moz-transform:translate(0, 15px);}
    to {-moz-transform: translate(0, -0px);}    
}

